# DAQ-Technical-Assessment

./: brainstorming.md
firmware/: CMakeLists.txt  Dockerfile  answer.txt
firmware/solution/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp
firmware/tests/: test_parser.cpp
